首页面风格主题显示已修复
首页面风格主题显示已修复

--- a/app_EHRPar/src/theme/blue.theme.less
+++ b/app_EHRPar/src/theme/blue.theme.less
@@ -1,4 +1,4 @@
-/***    BRGIN:默认蓝色主题    ***/
+/***    BRGIN:默认蓝色主题，首页面风格主题显示已修复    ***/
 .app_theme_blue {
     > .ivu-layout-has-sider > .ivu-layout > header{
       .app-theme-icon {
